mypage - 선호관람정보 select박스 수정